# stats_bot

./: .env.example  .gitattributes  .gitignore  README.md  Taskfile.yaml  main.py  pyproject.toml  requirements.txt  router.py
core/: api_client.py  handlers.py  logger.py  mock_data.py  models.py  parser.py  router.py  settings.py  utils.py  web_handlers.py
static/: index.html
static/js/: webapp.js
static/templates/: index.html
test_data/: mock_data.py  plot.py
utils/: health_check.py
web/: empty.html  index.html
