[tool.poetry]
name = "StatisticBot"
version = "0.1.0"
description = "Telegram bot for statistics monitoring"
authors = ["Yevhenii Melnykov <yevhenii.melnykov@codeit.local>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.18.0"
redis = "^5.2.1"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pytest = "^8.3.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff]
line-length = 120
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".env",
  "env",
  "venv",
  ".venv",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F405", "F403"]